--- a/config.yaml
+++ b/config.yaml
@@ -1,38 +1,47 @@
-baseurl: /
-languageCode: en-us
-title: A Hugo website
-theme: hugo-lithium
-googleAnalytics: ''
-disqusShortname: ''
+baseurl: https://example.com
+title: Hugo Tanka Theme Demo
+author: Nan Xiao
+canonifyurls: yes
+languagecode: en
+theme: hugo-tanka
+enableEmoji: yes
+hasCJKLanguage: no
+pygmentsstyle: vs
+pygmentscodefences: yes
 ignoreFiles:
   - \.Rmd$
   - \.Rmarkdown$
   - _cache$
   - \.knit\.md$
   - \.utf8\.md$
-permalinks:
-  post: /:year/:month/:day/:slug/
+params:
+  faviconfile: images/favicon.png
+  highlightjs: yes
+  highlightjslanguages:
+    - r
+    - python
+    - stan
+  progressively: no
+  sitename: Hugo Tanka Theme
+  uselatex: yes
+markup:
+  goldmark:
+    renderer:
+      unsafe: yes
 menu:
-  main:
+  primary:
+    - name: Home
+      url: /
+      weight: 1
     - name: About
       url: /about/
+      weight: 2
     - name: GitHub
-      url: https://github.com/rstudio/blogdown
+      url: https://github.com/nanxstats
+      weight: 3
     - name: Twitter
-      url: https://twitter.com/rstudio
-params:
-  MathJaxCDN: //cdnjs.cloudflare.com/ajax/libs
-  MathJaxVersion: 2.7.5
-  description: A website built through Hugo and blogdown.
-  favicon: favicon.ico
-  highlightjsCDN: //cdnjs.cloudflare.com/ajax/libs
-  highlightjsLang:
-    - r
-    - yaml
-  highlightjsTheme: github
-  highlightjsVersion: 9.12.0
-  logo:
-    alt: Logo
-    height: 50
-    url: logo.png
-    width: 50
+      url: https://twitter.com/nanxstats
+      weight: 4
+    - name: Subscribe
+      url: /index.xml
+      weight: 5
