--- a/config.yaml
+++ b/config.yaml
@@ -30,18 +30,10 @@ markup:
       unsafe: yes
 menu:
   primary:
-    - name: Home
+    - name: Adre
       url: /
       weight: 1
-    - name: About
-      url: /about/
+    - name: Am
+      url: /am/
       weight: 2
-    - name: GitHub
-      url: https://github.com/nanxstats
-      weight: 3
-    - name: Twitter
-      url: https://twitter.com/nanxstats
-      weight: 4
-    - name: Subscribe
-      url: /index.xml
-      weight: 5
+
