--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseurl: https://example.com
+baseurl: https://dysgu.netlify.app/
 title: Hugo Tanka Theme Demo
 author: Nan Xiao
 canonifyurls: yes
