--- a/config.yaml
+++ b/config.yaml
@@ -15,7 +15,7 @@ ignoreFiles:
   - \.knit\.md$
   - \.utf8\.md$
 params:
-  faviconfile: images/favicon2.png
+  faviconfile: images/favicon.png
   progressively: no
   sitename: Fy Mlog Cymraeg
 markup:
