--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 baseurl: https://dysgu.netlify.app/
-title: Fy mlog Cymraeg
+title: Fy Mlog Cymraeg
 author: Rhian Davies
 canonifyurls: yes
 languagecode: en
